--- a/product_brand/views/product_brand_ept.xml
+++ b/product_brand/views/product_brand_ept.xml
@@ -73,7 +73,7 @@
     </record>
 
     <record id="action_product_brand_ept_window" model="ir.actions.act_window">
-        <field name="name">product.brand.ept.tree</field>
+        <field name="name">Brands</field>
         <field name="type">ir.actions.act_window</field>
         <field name="view_mode">tree,form</field>
         <field name="search_view_id" ref="view_product_brand_ept_filter"/>
